# CareChain

./: .gitignore  jest.config.js  jest.polyfill-mock.js  jest.setup.js  package-lock.json  package.json
CareChainX/: .gitignore
CareChainX/backend/: .env.example  DEV_INSTRUCTIONS.md  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  main.py  pyproject.toml  requirements.txt  reset_dev.sh  set_webhook.sh  test_and_analyze.sh
CareChainX/backend/api/: urls.py
CareChainX/backend/bot/: api_client.py  handlers.py  main.py  utils.py
CareChainX/backend/bot_webhook/: apps.py  urls.py  views.py
CareChainX/backend/core/: celery.py  permissions.py  settings.py  tasks.py  telegram_utils.py  urls.py  utils.py
CareChainX/backend/data/: country.txt  degree_types.txt  diagnostic_facilities.txt  institution_types.txt  radiology_facilities.txt  skills.txt  specialities.txt
CareChainX/backend/feedback/: admin.py  models.py
CareChainX/backend/feedback/migrations/: 0001_initial.py  0002_initial.py
CareChainX/backend/jobs/: admin.py  models.py  urls.py  views.py
CareChainX/backend/jobs/migrations/: 0001_initial.py  0002_initial.py
CareChainX/backend/payments/: urls.py  views.py
CareChainX/backend/profiles/: admin.py  models.py  serializers.py  urls.py  views.py
CareChainX/backend/telegram_persistence/: bot_persistence.pkl
CareChainX/backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
CareChainX/backend/verification/: admin.py  urls.py  views.py
CareChainX/backend/webhooks/: admin.py  models.py  urls.py  views.py
(+284 files in other folders)
